add update project feature
