# internal/transport/http/handlers/project/project.go
@@ -13,6 +13,7 @@ type ProjectUseCase interface {
 	Add(c context.Context, d *project_usecase.AddProjectInput) error
 	GetByCustomerID(c context.Context) ([]*project_usecase.ProjectOutput, error)
 	Remove(c context.Context, projectID uuid.UUID) error
+	Update(c context.Context, d *project_usecase.UpdateInput) error
 }
 
 type handler struct {
@@ -32,4 +33,5 @@ func (h *handler) Register(g *echo.Group, m httphelper.Middleware) {
 	private.GET("", h.getMy)
 	private.POST("", h.add)
 	private.DELETE("/:projectID", h.remove)
+	private.PATCH("/:projectID", h.update)
 }
